<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Register Page"
        android:textColor="#ffffff"
        android:textSize="17dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/txt_user_regist"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:gravity="center"
        android:hint="@string/user_register"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_pass_regist"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center"
        android:hint="@string/password_regist"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_pass_cnf"
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:background="#ffffff"
        android:gravity="center"

        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="277dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/register"
        android:textSize="22dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:orientation="horizontal">

        <TextView
            android:id="@+id/not_registered2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_a_member"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/login_now"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>
