<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:text="Welcome Back!!"
        android:textColor="#ffffff"
        android:textSize="17dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/txt_user_login"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:gravity="center"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/txt_pass_login"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="277dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/login"
        android:textSize="22dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/not_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/register_now"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>